@@ -13,6 +13,7 @@ Broker:
 Client library:
 - Fix publish properties not being passed to on_message_v5 callback for QoS 2
   messages. Closes #1432.
+- Fix documentation issues in mosquitto.h. Closes #1478.
 
 Clients:
 - Fix duplicate cfg definition in rr_client. Closes #1453.
